--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js"
   },
-  "author": "NAME HERE",
+  "author": "Myra Rudy",
   "license": "Apache 2.0",
   "dependencies": {
     "express": "^5.1.0"
